update hw4 report

--- a/HW4/report/hw4.tex
+++ b/HW4/report/hw4.tex
@@ -85,30 +85,69 @@
 		\end{figure}
 		
 		
-	\item Out put images  \texttt{q2\_Superpixels.png} and \texttt{q2\_result.png} are shown in Figure \ref{fig:q2_1} and \ref{fig:q2_2} correspondingly. We find the average node degree is $5.33766$ for the adjacency matrix in this problem. The adjacency graph is not perfectly banded diagonal matrix because superpixels in images have various sizes. We can see that some superpixels are cover a lot of space along the $y$ direction, while narrow along $x$ direction. In this way, it is able to adjunct to some superpixel, whose centroid is far from its centroid. Moreover, some superpixel are relatively small and only adjunct to four superpixels around it.  
-	\begin{figure}[H]
-		\centering\adjincludegraphics[width=\textwidth,trim={{.08\width} {.38\height} {.08\width} {.36\height}},clip,]{q2_Superpixels.eps}
-		\caption{Superpixels of Question 2}
-		\label{fig:q2_1}
-	\end{figure}
-	\begin{figure}[H]
-		\centering\adjincludegraphics[width=\textwidth,trim={{.05\width} {.3\height} {.08\width} {.3\height}},clip,]{q2_result.eps}
-		\caption{Results of Question 2}
-		\label{fig:q2_2}
-	\end{figure}
+	\item
+	\begin{enumerate}
+		\item Out put images  \texttt{q2\_Superpixels.png} and \texttt{q2\_result.png} are shown in Figure \ref{fig:q2_1} and \ref{fig:q2_2} correspondingly.
+		\begin{figure}[H]
+			\centering\adjincludegraphics[width=\textwidth,trim={{.08\width} {.38\height} {.08\width} {.36\height}},clip,]{q2_Superpixels.eps}
+			\caption{Superpixels of Question 2}
+			\label{fig:q2_1}
+		\end{figure}
+		\begin{figure}[H]
+			\centering\adjincludegraphics[width=\textwidth,trim={{.05\width} {.3\height} {.08\width} {.3\height}},clip,]{q2_result.eps}
+			\caption{Results of Question 2}
+			\label{fig:q2_2}
+		\end{figure}
+	
+	\item We find the average node degree is $5.33766$ for the adjacency matrix in this problem.
+	
+	\item The adjacency graph is not perfectly banded diagonal matrix because superpixels in images have various sizes. We can see that some superpixels are cover a lot of space along the $y$ direction, while narrow along $x$ direction. In this way, it is able to adjunct to some superpixel, whose centroid is far from its centroid. Moreover, some superpixel are relatively small and only adjunct to four superpixels around it.  
+	\end{enumerate}
+	   
+	
 
 
-	\item Out put images  \texttt{q3\_Superpixels.png} and \texttt{q3\_result.png} are shown in Figure \ref{fig:q3_1} and \ref{fig:q3_2} correspondingly.
+	\item
+	\begin{enumerate}
+		\item 
+		 Out put images  \texttt{q3\_Superpixels.png} and \texttt{q3\_result.png} are shown in Figure \ref{fig:q3_1} and \ref{fig:q3_2} correspondingly.
+		\begin{figure}[H]
+			\centering\adjincludegraphics[width=\textwidth,trim={{.08\width} {.38\height} {.08\width} {.36\height}},clip,]{q3_Superpixels.eps}
+			\caption{Superpixels of Question 3}
+			\label{fig:q3_1}
+		\end{figure}
+		\begin{figure}[H]
+			\centering\adjincludegraphics[width=\textwidth,trim={{.05\width} {.34\height} {.08\width} {.35\height}},clip,]{q3_result.eps}
+			\caption{Results of Question 3}
+			\label{fig:q3_2}
+		\end{figure}
+	
+	\item We have shown Adjacency matrix and capacity image in the figure \ref{fig:q3_3}. We know that adjacency matrix is an unweighted bidirected graph, and capacity matrix is an weighted bidirected graph. Capacity image has two extra nodes, source and sink than the adjacency matrix. All edges in adjacency matrix are preserved in capacity matrix, and source and sink are connected to all nodes besides each other.
 	\begin{figure}[H]
-		\centering\adjincludegraphics[width=\textwidth,trim={{.08\width} {.38\height} {.08\width} {.36\height}},clip,]{q3_Superpixels.eps}
-		\caption{Superpixels of Question 3}
-		\label{fig:q3_1}
+		\centering\adjincludegraphics[width=\textwidth,trim={{.08\width} {.2\height} {.08\width} {.2\height}},clip,]{q3_capa_img.eps}
+		\caption{Capacity Image of Question 3}
+		\label{fig:q3_3}
 	\end{figure}
-	\begin{figure}[H]
-		\centering\adjincludegraphics[width=\textwidth,trim={{.05\width} {.34\height} {.08\width} {.35\height}},clip,]{q3_result.eps}
-		\caption{Results of Question 3}
-		\label{fig:q3_2}
-	\end{figure}
+
+	\item 
+	\end{enumerate}
+
+	\item \begin{enumerate}
+		\item Flower segmentation is shown in Figure \ref{fig:q4_1_1} and \ref{fig:q4_1_2}.
+		\begin{figure}[H]
+			\centering\adjincludegraphics[width=\textwidth,trim={{.08\width} {.38\height} {.08\width} {.36\height}},clip,]{flower1_Superpixels.eps}
+			\caption{Superpixels of Question 4a}
+			\label{fig:q4_1_1}
+		\end{figure}
+		\begin{figure}[H]
+			\centering\adjincludegraphics[width=\textwidth,trim={{.05\width} {.34\height} {.08\width} {.35\height}},clip,]{flower1_result.eps}
+			\caption{Results of Question 4a}
+			\label{fig:q4_1_2}
+		\end{figure}
+	
+	
+		
+	\end{enumerate}
 	\end{enumerate}
 \pagebreak
 \section*{Appendix}
