report4 in progress

--- a/HW4/report/hw4.tex
+++ b/HW4/report/hw4.tex
@@ -145,6 +145,37 @@
 			\label{fig:q4_1_2}
 		\end{figure}
 	
+	\item Flag segmentation is shown in Figure \ref{fig:q4_2_1} and \ref{fig:q4_2_2}. We can see that if we click on a red stripe, we are not able to segment all red stripes in the images.
+	\begin{figure}[H]
+		\centering\adjincludegraphics[width=\textwidth,trim={{.08\width} {.35\height} {.08\width} {.33\height}},clip,]{flag1_Superpixels.eps}
+		\caption{Superpixels of Question 4b}
+		\label{fig:q4_2_1}
+	\end{figure}
+	\begin{figure}[H]
+		\centering\adjincludegraphics[width=\textwidth,trim={{.05\width} {.34\height} {.08\width} {.35\height}},clip,]{flag1_result.eps}
+		\caption{Results of Question 4b}
+		\label{fig:q4_2_2}
+	\end{figure}
+
+	\item Porch segmentation is shown in Figure \ref{fig:q4_3_1} and \ref{fig:q4_3_2}. It is clear that we can segment two boots perfectly, since the color of both boots are quite constant, and it is unique than other section in the image.
+	\begin{figure}[H]
+		\centering\adjincludegraphics[width=\textwidth,trim={{.08\width} {.3\height} {.08\width} {.25\height}},clip,]{porch1_Superpixels.eps}
+		\caption{Superpixels of Question 4c}
+		\label{fig:q4_3_1}
+	\end{figure}
+	\begin{figure}[H]
+		\centering\adjincludegraphics[width=\textwidth,trim={{.05\width} {.25\height} {.08\width} {.25\height}},clip,]{porch1_result.eps}
+		\caption{Results of Question 4c}
+		\label{fig:q4_3_2}
+	\end{figure}
+
+	\item If we try to segment the basket of porch image, the result is shown in Figure \ref{fig:q4_4}. 
+	\begin{figure}[H]
+		\centering\adjincludegraphics[width=\textwidth,trim={{.05\width} {.25\height} {.08\width} {.25\height}},clip,]{porch2_result.png}
+		\caption{Results of Question 4c}
+		\label{fig:q4_4}
+	\end{figure}
+	
 	
 		
 	\end{enumerate}
